# reactions

./: Cargo.toml  LICENSE  README.md  default.nix  dev-setup.md  package-lock.json  package.json  rocket.config.js
crates/dummy/: Cargo.toml  README.md
crates/dummy/src/: dummy.rs  lib.rs
crates/profiles/: Cargo.toml
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs
crates/zome/: Cargo.toml  README.md
crates/zome/src/: dummy.rs  handlers.rs  lib.rs
docs/: index.md
docs/_assets/: webmanifest.json
docs/_assets/_static/: custom-elements.json
docs/_data/: site.cjs
docs/guides/: index.md
docs/guides/backend/: types.md  zome.md
docs/guides/frontend/: elements.md  reactions-service.md  reactions-store.md
docs/guides/setting-up/: adding-the-frontend.md  adding-the-zome.md
tests/: package.json
tests/src/: index.ts
ui/: README.md  package-lock.json  package.json
ui/demo/: index.html
ui/src/: config.ts  context.ts  index.ts  mocks.ts  reactions-service.ts  reactions-store.ts  types.ts
ui/src/definitions/: choosable-emoji-reaction.ts  create-reaction.ts  icon-reaction.ts  list-reactions.ts  my-reaction.ts  reaction-detail.ts  reaction-prompt.ts  reactions-row.ts  update-reaction.ts
ui/src/elements/: agent-avatar.ts  choosable-emoji-reaction.ts  create-reaction.ts  edit-reaction.ts  emoji-reaction.ts  icon-reaction.ts  list-reactions.ts  my-reaction.ts  reaction-detail.ts  reaction-prompt.ts  reactions-row.ts  search-agent.ts  update-reaction.ts
ui/test/: elements.test.js
ui/test/mocks/: index.js  reactions.mock.js
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
