[package]
authors = ["matthme@protonmail.com", "guillem.cordoba@gmail.com"]
description = "Zome to create Dummy entries for demo and testing purposes"
documentation = "https://holochain-open-dev.github.io/reactions"
edition = "2018"
license = "MIT"
name = "hc_zome_dummy"
repository = "https://github.com/holochain-open-dev/reactions"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_dummy"

[dependencies]
derive_more = "0"
serde = "1"

hdk = {version = "0.0.121", features = ["encoding"]}
