[package]
authors = ["matthme@protonmail.com", "guillem.cordoba@gmail.com"]
description = "Types for the hc_zome_reactions zome"
documentation = "https://holochain-open-dev.github.io/reactions"
edition = "2018"
homepage = "https://docs.rs/hc_zome_reactions_types"
license = "MIT"
name = "hc_zome_reactions_types"
repository = "https://github.com/holochain-open-dev/reactions"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_reactions_types"

[dependencies]
derive_more = "0"
serde = "1"

hdk = {version = "0.0.127", features = ["encoding"]}
