[package]
authors = ["matthme@protonmail.com", "guillem.cordoba@gmail.com"]
description = "Reactions zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/reactions"
edition = "2018"
homepage = "https://docs.rs/hc_zome_reactions"
license = "MIT"
name = "hc_zome_reactions"
repository = "https://github.com/holochain-open-dev/reactions"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_reactions"

[dependencies]
derive_more = "0"
serde = "1"

hc_zome_reactions_types = {path = "../types"}
hdk = {version = "0.0.121", features = ["encoding"]}
